working on ch5 thesis

--- a/thesis/content/ch05-experimentation.tex
+++ b/thesis/content/ch05-experimentation.tex
@@ -10,71 +10,34 @@
 % admit weaknesses
 
 \section{Participants}
-Data were recorded from 15 male and 2 female University students,
-aged between 18 and 32 (M = 25.00, SD = 3.875). As part of the
-experiment procedure demographic data were collected with special
-respect to the suggestions made by ~\cite{?}. Of the participants 94.1\% were
-right-handed. 41.2\% of participants rated their computer skills as Advanced
-while the rest of 58.8\% rated their skills as Intermediate. 35.3\% of
-participants have described themselves playing video games every day, while
-41.2\% of them described themselves playing video games a few times per week
-and 17\% have been playing video games a few times per month and the rest of
-5.9\% have been playing video games a few times per year. All participants
-have used PC as gaming system while 76.48\% of them also have used at least
-one of the four popular console platforms (XBox360, PS3, PS2, Wii) for gaming.
-All of participants had at least some experience with 3D shooting games like
-First Person Shooters. 47.1\% have described themselves playing 3D shooting games
-many times, while another 41.2\% described themselves as experts in
-3D shooting games; Only a total of 11.8\% had limited or intermediate experience
-with 3D shooting games. Among the participants only 5.9\% had intermediate
-experience in using mouse in games, 35.3\% of them declared using mouse in games
-many times and 58.8\% of them described themselves as experts in doing that.
-
+Data were recorded from 15 male and 2 female University students, aged between 18 and 32 (M = 25.00, SD = 3.875). As part of the experiment procedure demographic data were collected with special respect to the suggestions made by ~\cite{?}. Of the participants 94.1\% were right-handed. 41.2\% of participants rated their computer skills as Advanced while the rest of 58.8\% rated their skills as Intermediate. 35.3\% of participants have described themselves playing video games every day, while 41.2\% of them described themselves playing video games a few times per week and 17\% have been playing video games a few times per month and the rest of 5.9\% have been playing video games a few times per year. All participants have used PC as gaming system while 76.48\% of them also have used at least one of the four popular console platforms (XBox360, PS3, PS2, Wii) for gaming. All of participants had at least some experience with 3D shooting games like First Person Shooters. 47.1\% have described themselves playing 3D shooting games many times, while another 41.2\% described themselves as experts in 3D shooting games; Only a total of 11.8\% had limited or intermediate experience with 3D shooting games. Among the participants only 5.9\% had intermediate experience in using mouse in games, 35.3\% of them declared using mouse in games for many times and other 58.8\% of them described themselves as experts in doing that.
 
 \section{Design}
+
+A four condition (standard, player, NPC, environment) play session was employed to evaluate performance and excitement as dependent variables. The order 4 Latin square used to permute conditions between participants was as the following:
+
+%%%%%%%%% nasty
+at the start of the play session, they were required to press one of the four buttons on the entrance ramp labeled 1 to 4, and when any one of these buttons were pressed, the Affect engine started calibrating players signals for 60 seconds, during the calibration mode, no adjustment to any of game parameters is applied, no matter which condition is being played. After the one minute of calibration the system decides the standard range of signal for player's excitement value. After that except for the condition number 1 which is the no adaptation mode, the captured excitement value is normalized in the calibrated player range of excitement into a value between 0 and 1, and this value is then used to adjust the game parameters, this process of capturing, adjusting and applying the signal value would continue for 3 minutes until the next cycle of calibrating and adjustment starts. The player is required to play every condition for at least 5 minutes to ensure capturing of a complete cycle of calibrating and adjustment. After playing each condition, the player is asked to rest for 7 minutes, during this time the player is asked to fill out between condition questionnaires, which tries to ask the participant to self-estimate his affect level. The Player Mode is labeled as condition number 2, the NPC mode is labeled as condition number 3 and the Environment mode is labeled as condition number 4. From the 17 participants in this study, one has been lacking adequate level of expertise and therefore was unable to continue doing the required tasks at the expected level and therefore his results was not usable for this study. The image of signal values for this participant is depicted at the following:
+%%%%%%%%% nasty
+
+\centerline{a b c d}
+\centerline{b c d a}
+\centerline{c d a b}
+\centerline{d a b c}
+
 \section{Procedure}
 
+All experiments were conducted on weekdays, with the first slot beginning at 11:00h and the last ending at 18:30h. Participants were contacted to choose their preferred time slots while general time for one experimental session was 1:30 hours with setup and cleanup. Participants were invited to a laboratory, after a brief introduction of the experimental procedure, and becoming aware of the data being collected during the session, they were asked to fill out and sign informed consent form, this was the only paper form used during the experiment. Then the GSR sensors were attached to participant's hand.
+
+Attached GSR sensors wired to the signal decoder brings limitations for participants while moving and using their hand. To diminish noisy signals and make participants feel comfortable under these limitations, the GSR sensors were attached to the hand that was handling the mouse during the game. While fingers dealing with mouse were quite steady compared to the other hand handling the keyboard, those fingers used to press the left and right mouse buttons were usually most comfortable ones for attaching GSR sensors. Some participants used index and middle fingers to press mouse buttons and others used index and ring fingers to do that.
+
+Having GSR sensors attached, participants were seated in a comfortable office chair, which was adjusted according to their individual height. They were then led to fill out the initial game demographic questionnaire. To keep GSR sensors attached during the experiment, all questionnaires after attaching GSR sensors were filled out using mouse and the same computer system. After the demographic questionnaire, participants were asked to self-assess their arousal, valence and dominance level using the self assessment manikin (SAM) questionnaire ~\cite{?}. Filling initial questionnaires after attaching GSR sensors was meant to give enough time (approximately 5 minutes) to the participant to get used to the sensors before playing the game. Participants then have been taken to a tour in the game. Different game mechanics were shown to them, and they were given about 1 minute, dependent to their experience, to make themselves comfortable with it. Some participants didn't need this time due to prior experience and asked to skip that. Then, participants played four different game conditions described before. Participants were not told about the differences between conditions. Each game condition was set to take 5 minutes. After each condition, participants were asked to write their comments about particular changes they noticed under that condition and its effect on their gameplay. Then they were asked to filled out the intrinsic motivation inventory (IMI) questionnaire, the player experience of need satisfaction (PENS) questionnaire and the game engagement questionnaire (GEQ) to rate their experience. Filling the questionnaires between conditions was done during the minimum 7 minutes of resting time before the next condition begins. The resting time was meant to restore players baseline signals. GSR sensors were recording players signals during both the play and the resting sessions from the beginning of the first condition to the ending of the last condition. After completion of the experiment, sensors were removed. Participants were debriefed and compensated \$15 Canadian dollars and escorted out of the lab.
+
 \section{Materials and Measures}
-\subsection{Game Experience Questionnaire}
 \subsection{Self-Assessment-Manikin Valence Scales}
 \subsection{Intrinsic Motivation Inventory}
 \subsection{Player Experience of Need Satisfaction}
 \subsection{Game Engagement Questionnaire}
-
-This study has been run during three weeks, each session took about
-45 minutes. 17 participants of moderate to expert FPS players were
-asked to play the game under four different conditions: No
-Adaptation, Player Adapted, NPC Adapted and Environment Adapted.
-The order of played conditions was circulated between different players.
-Participants did not know what different conditions exists and
-which condition they are currently playing, at the start of the play
-session, they were required to press one of the four buttons on the
-entrance ramp labeled 1 to 4, and when any one of these buttons were
-pressed, the Affect engine started calibrating players signals for 60
-seconds, during the calibration mode, no adjustment no any of game
-parameters is applied, no matter which condition is being played.
-After the one minute of calibration the system decides the standard
-range of signal for player’s excitement value. After that except for
-the condition number 1 which is the no adaptation mode, the captured
-excitement value is normalized in the calibrated player range of
-excitement into a value between 0 and 1, and this value is then used to
-adjust the game parameters, this process of capturing, adjusting and
-applying the signal value would continue for 3 minutes until the
-next cycle of calibrating and adjustment starts. The player is
-required to play every condition for at least 5 minutes to ensure
-capturing of a complete cycle of calibrating and adjustment.
-After playing each condition, the player is asked to rest for 7
-minutes, during this time the player is asked to fill out between
-condition questionnaires, which tries to ask the participant to
-self-estimate his affect level.
-The Player Mode is labeled as condition number 2, the NPC mode is
-labeled as condition number 3 and the Environment mode is labeled
-as condition number 4. From the 17 participants in this study,
-one has been lacking adequate level of expertise and therefore was
-unable to continue doing the required tasks at the expected level
-and therefore his results was not usable for this study.
-The image of signal values for this participant is depicted at the
-following:
 
 An image of a regular participant signal values is depicted at
 the following. In this image from left to right the light blue line
