added thesis appendices

--- a/thesis/content/acknowledgements.tex
+++ b/thesis/content/acknowledgements.tex
@@ -1,26 +1,11 @@
-First and foremost thanks God for bestowing me the ability to
-learn, to speak and to write. For all of the oppurtinities and all of His mercy and compassion I have experienced throughout my life.\\
+First and foremost thanks God for bestowing me the ability to learn, to speak and to write. For all of the oppurtinities and all of His mercy and compassion I have experienced throughout my life.\\
 
-I would like to express my sincere gratitude to my advisors 
-Prof. Kevin G. Stanley and Prof. Regan Mandryk for the continuous support of my M.S. study and research,
-for their patience, motivation and friendliness.
-Their guidance helped me in all the time of research and writing of this thesis.
-I could not imagine having any better advisors and mentors for my M.S. study.\\
+I would like to express my sincere gratitude to my advisors Prof. Regan Mandryk  and Prof. Kevin G. Stanley for the continuous support of my M.S. study and research, for their patience, motivation and friendliness. Their guidance helped me in all the time of research and writing of this thesis. I could not imagine having any better advisors and mentors for my M.S. study.\\
 
-Besides my advisors, I would like to thank the rest of my thesis
-committee: Prof. , Prof. , and Dr. , for their 
-encouragement, insightful comments, and hard questions.\\
+Besides my advisors, I would like to thank the rest of my thesis committee: Prof. , Prof. , and Dr. , for their encouragement, insightful comments, and hard questions.\\
 
-My sincere thanks also goes to Dr. Daniel Neilson, Gwen Lancaster,
-Shakiba Jalal and Dr. Stanley for offering me the internship opportunities
-and leading me working on diverse exciting projects.\\
+My sincere thanks also goes to Dr. Daniel Neilson, Gwen Lancaster, Shakiba Jalal and Dr. Stanley for offering me the internship opportunities and leading me working on diverse exciting projects.\\
 
-I thank my fellow labmates in DISCUS and HCI Labs: Mohammad Hashemian, Amin Tavassolian,
-Ariyan Zohoorian, Farjana Eishita, Max Birk, Michael Kalyn, Michael Bullock and Steve Sutcliffe,
-for the stimulating discussions, for the nights we were working together,
-and for all the fun we have had in the last years.
-Also I thank all of my other friends in University of Saskatchewan.\\
+I would like to thank my wife Farzane Jenaban for her pacience, understanding and support in every single moment my attention was away from her towards this research and thesis; And my parents Mohammad Negini and Farzaneh Sarmadi, for their spiritual support throughout my life.\\
 
-Last but not the least, I would like to thank my family: my parents Mohammad Negini and
-Farzaneh Sarmadi, for giving birth to me at the first place and supporting me spiritually
-throughout my life.\\
+Last but not the least I thank my fellow labmates in DISCUS and HCI Labs: Mohammad Hashemian, Amin Tavassolian, Ariyan Zohoorian, Farjana Eishita, Max Birk, Michael Kalyn, Michael Bullock and Steve Sutcliffe, for the stimulating discussions, for the nights we were working together, and for all the fun we have had in the last years. Also I thank all of my other friends in University of Saskatchewan.\\
