--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -93,7 +93,7 @@
   author = {Thought Technology Ltd.},
   title = {{Procomp Infinity Hardware Manual}},
   howpublished = "\url{http://www.thoughttechnology.com/manual.htm/}",
-  year = {2013}, 
+  year = {2013},
   note = "[Online; accessed 20-April-2013]"
 }
 @article{mandryk2007fuzzy,
@@ -219,4 +219,14 @@
   pages={73--88},
   year={2010},
   publisher={Springer}
+}
+@article{scherer1993neuroscience,
+  title={Neuroscience projections to current debates in emotion psychology},
+  author={Scherer, Klaus R},
+  journal={Cognition \& Emotion},
+  volume={7},
+  number={1},
+  pages={1--41},
+  year={1993},
+  publisher={Taylor \& Francis}
 }
