--- a/thesis/content/ch02-lit-review.tex
+++ b/thesis/content/ch02-lit-review.tex
@@ -6,7 +6,7 @@
 %Critique the existing work - Where is it strong where is it weak? What are the unreasonable/undesirable assumptions?
 %Identify opportunities for more research (i.e., your thesis) Are there unaddressed, or more important related topics?
 %After reading this chapter, one should understand the motivation for and importance of your thesis
-%You should clearly and precisely define all of the key concepts dealt with in the rest of the thesis, and teach the 
+%You should clearly and precisely define all of the key concepts dealt with in the rest of the thesis, and teach the
 %reader what s/he needs to know to understand the rest of the thesis.
 
 %%% 1 page: overview of what is going on
@@ -17,43 +17,13 @@
 %%% Here I'd talk about different approaches for describing emotions and affects
 %%% like the AV space
 
-Using emotional responses to increase the level of users interaction with a real-time 
-play technology requires an effective technique to identifying specific emotion 
-states within an emotional space. Major existing emotion models in the
-psychology literature includes: basic emotion theory ~\cite{ekman1992argument, ekman1992there} ,
-dimensional emotion theory ~\cite{lang1995emotion, russell1980circumplex} and models 
-from appraisal theory (e.g.,~\cite{roseman2001model}) ~\cite{zhang2010service}
+Using emotional responses to increase the level of users interaction with a real-time play technology requires an effective technique to identifying specific emotion states within an emotional space. Major existing emotion models in the psychology literature includes: basic emotion theory ~\cite{ekman1992argument, ekman1992there} , dimensional emotion theory ~\cite{lang1995emotion, russell1980circumplex} and models from appraisal theory (e.g.,~\cite{roseman2001model}) ~\cite{zhang2010service}
 
-Basic emotion theory identifies anger, disgust, fear, happiness, sadness, and 
-surprise ~\cite{peter2006emotion} as the concise set of primary
-emotions. These are actually the least six universal categories researchers agreed 
-upon ~\cite{zagalo2004story}. It also claims these
-primary emotions are distinguishable from each other and
-other affective phenomena ~\cite{dalgleish1999handbook}. On the other hand dimensional 
-emotion theory argues that all emotional states reside
-in a two-dimensional space, defined by arousal and valence.
+Basic emotion theory identifies anger, disgust, fear, happiness, sadness, and surprise ~\cite{peter2006emotion} as the concise set of primary emotions. These are actually the least six universal categories researchers agreed upon ~\cite{zagalo2004story}. It also claims these primary emotions are distinguishable from each other and other affective phenomena ~\cite{dalgleish1999handbook}. On the other hand dimensional emotion theory argues that all emotional states reside in a two-dimensional space, defined by arousal and valence.
 
-While there are various opinions on identifying emotional
-states, classification into discrete emotions ~\cite{dalgleish1999handbook}, or locating
-emotions along multiple axes ~\cite{russell1989affect, lang1995emotion}, both 
-had limited success in using physiology to identify 
-emotional states ~\cite{cacioppo2000psychophysiology}.
+While there are various opinions on identifying emotional states, classification into discrete emotions ~\cite{dalgleish1999handbook}, or locating emotions along multiple axes ~\cite{russell1989affect, lang1995emotion}, both had limited success in using physiology to identify emotional states ~\cite{cacioppo2000psychophysiology}.
 
-Lang used a 2-D space defined by arousal and valence (pleasure) (AV space) 
-to classify emotions ~\cite{lang1995emotion}. Valence can be
-described as a subjective feeling of pleasantness or unpleasantness while 
-arousal is the subjective state feeling activated
-or deactivated ~\cite{barrett1998discrete}. Using an arousal-valence space to create
-the Affect Grid, Russell believed that arousal and valence
-are cognitive dimensions of individual emotion states. Affect is a broad definition 
-that includes feelings, moods, sentiments etc. and is commonly used to define the concept of
-emotion ~\cite{picard2003affective}. Russell's model has two "axes"
-that might be labeled as displeasure/pleasure (horizontal
-axis) and low/high arousal (vertical axis) It is not easy to
-map affective states into distinctive emotional states, However these models can 
-provide a mapping between predefined
-states and the level of arousal and valence ~\cite{zagalo2004story}, 
-Figure ~\ref{fig:russelavspace}.
+Lang used a 2-D space defined by arousal and valence (pleasure) (AV space) to classify emotions ~\cite{lang1995emotion}. Valence can be described as a subjective feeling of pleasantness or unpleasantness while arousal is the subjective state feeling activated or deactivated ~\cite{barrett1998discrete}. Using an arousal-valence space to create the Affect Grid, Russell believed that arousal and valence are cognitive dimensions of individual emotion states. Affect is a broad definition that includes feelings, moods, sentiments etc. and is commonly used to define the concept of emotion ~\cite{picard2003affective}. Russell's model has two "axes"that might be labeled as displeasure/pleasure (horizontal axis) and low/high arousal (vertical axis) It is not easy to map affective states into distinctive emotional states, However these models can provide a mapping between predefined states and the level of arousal and valence ~\cite{zagalo2004story}, Figure ~\ref{fig:russelavspace}.
 
 \begin{figure}[h!]
   \caption[Russell's arousal and valence model]
@@ -65,28 +35,7 @@ Figure ~\ref{fig:russelavspace}.
 
 \footnotetext{Photo credit: http://imagine-it.org/gamessurvey/}
 
-Both mentioned models for identifying emotions convey some
-practical issues in emotion measurement. In a HCI context, the 
-stimuli for potential emotions may vary less than
-in human-human interaction (e.g., participant verbal expressions and body language) 
-~\cite{zhang2010service} and also the combination of
-evoked emotions ~\cite{peter2006emotion}. However with help of physiological
-signals and the fuzzy logic in the model we are going to
-use, such issues with our dimentional emotion models would
-be minimized. Though it is anticipated to observe different range 
-of evoked emotions while interacting with play
-technologies compared to interacting with other humans in
-daily life. ~\cite{zhang2010service}. However our dimensional emotion models
-suffers some other problems. One problems is that arousal
-and valence are not independent and one can impact the
-other ~\cite{mandryk2007fuzzy}. Continuously capturing emotional experiences
-in this applied setting is of its other hallmarks. Subjective
-measures based on dimensional emotion theory, such as the
-Affect Grid ~\cite{russell1989affect} and the Self-Assessment 
-Manikin ~\cite{bradley1994measuring}, allow
-for quick assessments of user emotional experiences but they
-may aggregate responses over the course of many events ~\cite{zhang2010service}.
-This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
+Both mentioned models for identifying emotions convey some practical issues in emotion measurement. In a HCI context, the stimuli for potential emotions may vary less than in human-human interaction (e.g., participant verbal expressions and body language) ~\cite{zhang2010service} and also the combination of evoked emotions ~\cite{peter2006emotion}. However with help of physiological signals and the fuzzy logic in the model we are going to use, such issues with our dimentional emotion models would be minimized. Though it is anticipated to observe different range of evoked emotions while interacting with play technologies compared to interacting with other humans in daily life. ~\cite{zhang2010service}. However our dimensional emotion models suffers some other problems. One problems is that arousal and valence are not independent and one can impact the other ~\cite{mandryk2007fuzzy}. Continuously capturing emotional experiences in this applied setting is of its other hallmarks. Subjective measures based on dimensional emotion theory, such as the Affect Grid ~\cite{russell1989affect} and the Self-Assessment Manikin ~\cite{bradley1994measuring}, allow for quick assessments of user emotional experiences but they may aggregate responses over the course of many events ~\cite{zhang2010service}. This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
 
 %%%-----------------------------------------------------------------------------
 
@@ -112,14 +61,14 @@ This work uses Mandryk et al. version of AV space ~\cite{mandryk2007fuzzy}.
 %%% adapting play technologies by chaning Player, NPC, Environment parameters.
 %%% getting challenged and physiological signals, the importance of GSR
 
-Playing video games as a kind of entertainment would help people to have new internal 
-experiences. The virtual world of video games let adults to play as new rolls and enjoy filling 
-their heads with new thoughts and emotions. Some people value 
+Playing video games as a kind of entertainment would help people to have new internal
+experiences. The virtual world of video games let adults to play as new rolls and enjoy filling
+their heads with new thoughts and emotions. Some people value
 the sensation
 
-Games are opportunities for development and design of environments therefore 
+Games are opportunities for development and design of environments therefore
 the player can interactively experience various emotions and mental conditions.
-This interactive experience in contrast to cinema 
+This interactive experience in contrast to cinema
 and other major types of entertainment is what makes them exceptional
 
 %%%-----------------------------------------------------------------------------
