--- a/thesis/content/ch03-problem-and-solution.tex
+++ b/thesis/content/ch03-problem-and-solution.tex
@@ -1,11 +1,14 @@
 % 10 to 15 pages
-% - talk about various game design elements, player, npcs and environment 
+% - talk about various game design elements, player, npcs and environment
 % and their connection to the play experience
 
 \section{Adaptive Game Design}
 \subsection{Player}
+% give examples of god of war, kratus rage mode with some photo
 \subsection{NPCs}
+% give examples of a situation in which npcs increase to excite the player with some photo
 \subsection{Environment}
+% give examples of chaning background like music, lighting etc with some photo.
 
 \section{Phisiological Signals}
 \subsection{Heart Rate}
