working on thesis

--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -230,3 +230,12 @@
   year={1993},
   publisher={Taylor \& Francis}
 }
+@book{wehrenberg1995willball,
+  title={Willball: a novel},
+  author={Wehrenberg, C.},
+  isbn={9781886163027},
+  lccn={94068750},
+  url={http://books.google.ca/books?id=ZgHUPSFpO-IC},
+  year={1995},
+  publisher={Solo Zone}
+}
