--- a/thesis/content/ch02-lit-review.tex
+++ b/thesis/content/ch02-lit-review.tex
@@ -61,6 +61,11 @@ Both mentioned models for identifying emotions convey some practical issues in e
 %%% adapting play technologies by chaning Player, NPC, Environment parameters.
 %%% getting challenged and physiological signals, the importance of GSR
 
+%% TODO:paraphrase
+The Affective Gaming concept was first introduced by Wehrenberg, Charles through using Biofeedback to control a game based on relaxation level, it was the earliest research for correlating a game with biofeedback and after years of research the project was first implemented in 1984 for apple II computers, and the test results proved that human arousal level can actually be measured through GSR and used to control a game  ~\cite{wehrenberg1995willball}.
+%% TODO:paraphrase
+
+
 Playing video games as a kind of entertainment would help people to have new internal
 experiences. The virtual world of video games let adults to play as new rolls and enjoy filling
 their heads with new thoughts and emotions. Some people value
