--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -52,6 +52,8 @@ S7N 5C9
 
 %-------------------------------------------------------------------------------
 
+\input{content/common.tex} %new commands go here
+
 % Chapters
 \chapter{Introduction}                             \label{chap:intro}      \input{content/ch01-intro.tex}
 \chapter{Human and Play Technologies}              \label{chap:man-n-play} \input{content/ch02-lit-review.tex}
